--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+/* 
+body
+{ 
+    height: 100%; 
+    margin: 0; 
+    padding: 0;
+    font-family: Helvetica, Arial, sans-serif; 
+    background: rgb(213, 214, 214);
+}
+
+
+input:-webkit-autofill {
+    -webkit-text-fill-color: #000 !important;
+}
+
+input:-webkit-autofill {
+    box-shadow: 0 0 0 30px rgb(255, 255, 255) inset;
+} */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+@media screen and (min-width: 600px) {
+    #itensmenu{display: hide;}
+    #btn-toggle{display: none;}
+}
+
+@media screen and (max-width: 600px) {
+    #itensmenu{display: none;}
+    #btn-toggle{display: block}
+}
