--- a/src/app/pages/clientes-page/clientes-page.component.html
+++ b/src/app/pages/clientes-page/clientes-page.component.html
@@ -1,71 +1,115 @@
 <div class="container">
-    <div class="row" align="center">
-        <div class="col">
-            <div class="form">
+    <div class="form-row justify-content-center text-center">
                 <mat-card class="card-login">
                     <h1>Clientes</h1>
                     <form [formGroup]="form">
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Nome</mat-label>
-                                <input matInput id="nome" type="text" formControlName="Nome" >
-                            </mat-form-field>
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Nome</mat-label>
+                                    <input matInput  class="form-control " id="nome" type="text" formControlName="Nome">
+                                    <mat-error *ngIf="!form.controls.Nome.valid && !form.controls.Nome.pristine && form.controls.Nome.touched">
+                                        Nome é obrigatorio
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Cep</mat-label>
-                                <input matInput class="campo" type="text" formControlName="Cep">
-                            </mat-form-field>
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Telefone</mat-label>
+                                    <input matInput class="form-control" type="text" formControlName="Telefone"
+                                    mask="(##) #####-####">
+                                </mat-form-field>
+                            </div>
+                            
+                            <div class="form-group col-md-5">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Telefone</mat-label>
+                                    <input matInput class="form-control" type="text" formControlName="Telefone1"
+                                    mask="(##) #####-####">
+                                </mat-form-field>
+                            </div>
+
+
+                            <div class="form-group col-md-2">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Cep</mat-label>
+                                    <input matInput class="form-control" type="text" formControlName="Cep"
+                                    mask="#####-###" (blur) ="consultaCEP($event.target.value)">  <!-- ou form.controls.Cep.value -->
+                                </mat-form-field>
+                            </div>
+                            
                         </div>
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Endereço</mat-label>
-                                <input matInput id="endereco" type="text" formControlName="Endereco">
-                            </mat-form-field>
-                      
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Numero</mat-label>
-                                <input matInput id="numero" type="text" formControlName="Numero">
-                            </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Bairro</mat-label>
-                                <input matInput id="bairro" type="text" formControlName="Bairro">
-                            </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Cidade</mat-label>
-                                <input matInput id="cidade" type="text" formControlName="Cidade">
-                            </mat-form-field>
-                        </div>
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Estado</mat-label>
-                                <input matInput id="estado" type="text" formControlName="Estado">
-                            </mat-form-field>
-                        </div>
-                        
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Email</mat-label>
-                                <input matInput id="email" type="text" formControlName="Email">
-                            </mat-form-field>
+                        <div class="form-row">
+                            <div class="form-group col-md-10">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Endereço</mat-label>
+                                    <input matInput class="form-control" id="endereco" type="text"
+                                        formControlName="Endereco" readonly>
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Numero</mat-label>
+                                    <input matInput class="form-control" id="numero" type="text"
+                                        formControlName="Numero">
+                                </mat-form-field>
+                            </div>
                         </div>
 
-                        <div class="form-group">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>Observação</mat-label>
-                                <textarea  matInput id="observacao" type="text" formControlName="Observacao"></textarea>
-                            </mat-form-field>
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Bairro</mat-label>
+                                    <input matInput class="form-control" id="bairro" type="text"
+                                        formControlName="Bairro" readonly>
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group col-md-5">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Cidade</mat-label>
+                                    <input matInput class="form-control" id="cidade" type="text"
+                                        formControlName="Cidade" readonly>
+                                </mat-form-field>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <mat-form-field class="example-full-width">
+                                    <mat-label>Estado</mat-label>
+                                    <input matInput class="form-control" id="estado" type="text"
+                                        formControlName="Estado" readonly>
+                                </mat-form-field>
+                            </div>
                         </div>
+                            <div class="form-row ">
+                                <div class="form-group col-md-12">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Email</mat-label>
+                                        <input matInput class="form-control" id="email" type="text"
+                                            formControlName="Email">
+                                    </mat-form-field>
+                                </div>
+                            </div>
 
-                        <button mat-raised-button color="primary">Salvar</button>
-                        <button mat-raised-button color="primary">Cancelar</button>
+                            <div class="form-row">
+                                <div class="form-group col-md-12">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Observação</mat-label>
+                                        <textarea matInput class="form-control" id="observacao" type="text"
+                                            formControlName="Observacao"></textarea>
+                                    </mat-form-field>
+                                </div>
+
+                            </div>
+                           
+
+                            <div class="form-row justify-content-center">
+                                <button mat-raised-button [disabled]="!form.valid" (click)="submit()" color="primary" >Salvar</button>
+                                <button mat-raised-button color="primary">Cancelar</button>
+                            </div>
+                       
                     </form>
                 </mat-card>
-            </div>
-        </div>
-    </div>
+    <div>
 </div>
