--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@ input:-webkit-autofill {
     box-shadow: 0 0 0 30px rgb(255, 255, 255) inset;
 } */
 
+@import url("reset.css");
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -32,3 +34,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     #itensmenu{display: none;}
     #btn-toggle{display: block}
 }
+
