formulario de veiculo integrado a clientes

--- a/src/app/components/shared/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/components/shared/navigation/sidenav-list/sidenav-list.component.html
@@ -6,8 +6,8 @@
         <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Clientes</span>   
     </a>
     <mat-menu #cadastro="matMenu">
-        <button mat-menu-item (click)="onSidenavClose()" routerLink="/clientes">clientes</button>
-        <button mat-menu-item (click)="onSidenavClose()">Add contact</button>
+        <button mat-menu-item (click)="onSidenavClose()" routerLink="/clientes">Clientes</button>
+        <button mat-menu-item (click)="onSidenavClose()" routerLink="/veiculos">Veiculos</button>
     </mat-menu>
     <a mat-list-item [matMenuTriggerFor]="manutencao">
         <mat-icon>account_balance</mat-icon><span class="nav-caption">Manutenção</span>
