--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -2,7 +2,7 @@
     <div class="row align-items-center">
         <div class="col" align="center">  
             <div>
-                <img class="logo" src="../../../assets/logoMotor1.jpg" alt="" srcset="">
+                <img class="logo" [src]="imagem" alt="" srcset="">
             </div>
             
             <mat-card class="card-login">
