--- a/src/app/components/shared/nav-bar/nav-bar.component.css
+++ b/src/app/components/shared/nav-bar/nav-bar.component.css
@@ -23,33 +23,34 @@ body{
 
 mat-toolbar {
     background-color: rgb(40, 40, 175);
-    color: white; 
-    font-family: Helvetica, Arial, sans-serif; 
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) ;
     width: 100%;
     padding: 0;
     margin: 0;
     display: flex;
-} 
+}
 
 a {
     text-decoration: none;
     color: white;
 }
- 
+
 a:hover, a:active{
     color: lightgray;
 }
- 
+
 .navigation-items{
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
- 
+
 /* mat-toolbar{
     border-radius: 3px;
 }
- 
+
 @media(max-width: 959px){
     mat-toolbar{
         border-radius: 0px;
