--- a/src/app/pages/veiculos/veiculo-page/veiculo-page.component.css
+++ b/src/app/pages/veiculos/veiculo-page/veiculo-page.component.css
@@ -1,15 +1,11 @@
-.container{
-  padding: 0px;
+
+
+.form-group {
   margin: 0px;
-  max-width: 100%;
-}
-div.col-12{
-  padding: 0px;
-  margin: 0px;
+  padding: 0.125rem;
 }
 
 .form {
-    padding-top: 1em;
     width: 100%;
 }
 
@@ -20,23 +16,30 @@ div.col-12{
 }
 
 .card-login{
-    max-width: 800px;
-    min-width: 200px;
-    width: 100%;
-    box-shadow: 10px 5px 5px rgb(0,0,0,0.3);
-    background-color: rgb(255, 255, 255);   
+    width: 90%;
+
+    /* box-shadow: 10px 5px 5px rgb(0,0,0,0.3); */
+    background-color: rgb(255, 255, 255);
 }
 
 
 .example-full-width {
     width: 100%;
-    color: #000; 
+    color: #000;
+    padding: 0px;
+    margin: 0px;
   }
 
+.mat-select {
+  padding: 0.5313rem 0px;
+  margin: 0.0469rem 0px 0px;
+}
 
-.mat-raised-button {
-    margin: 8px 8px 8px 8px;
-    width: 90px;
+
+div .mat-raised-button {
+    margin: 0px 0.25rem 0.25rem 0.25rem;
+    padding: 0px;
+    width: 3.75rem;
     text-align: center;
   }
 
@@ -54,7 +57,7 @@ input:-webkit-autofill {
 } */
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover
